# Ishtirak

./: .gitignore  CLAUDE.md  README.md
services/analytics-python/: Dockerfile  pyproject.toml
services/analytics-python/app/: __init__.py  clock.py  config.py  main.py  runtime.py  server.py
services/analytics-python/app/analytics/: __init__.py  core_client.py  jws.py  router.py  service_token.py  service_token_verifier.py
services/analytics-python/app/capture/: __init__.py  models.py  repository.py  sqlite_repository.py
services/analytics-python/app/consumer/: __init__.py  billing_consumer.py  connection.py  dispatch.py  messages.py  reading_consumer.py
services/analytics-python/app/publisher/: __init__.py  reading_flagged.py  schema.py
services/analytics-python/app/redis_state/: __init__.py  subscriber_state.py  tier_cache.py
services/analytics-python/app/rules/: __init__.py  engine.py  features.py  rule_set.py
services/analytics-python/tests/: conftest.py  test_config.py  test_health.py  test_reading_flagged_contract.py
services/analytics-python/tests/analytics/: test_core_client.py  test_router.py  test_service_token.py
services/analytics-python/tests/capture/: test_repository.py
services/analytics-python/tests/consumer/: test_billing_consumer.py  (+4 more)
services/edge-agent-python/: README.md  pyproject.toml
services/edge-agent-python/edge_agent/: __init__.py  bridge.py  buffer.py  config.py  main.py  parser.py  reading.py  uploader.py
services/edge-agent-python/tests/: test_bridge.py  test_buffer.py  test_config.py  test_parser.py  test_uploader.py
(+255 files in other folders)
