[project]
name = "ishtirak-edge-agent"
version = "0.1.0"
description = "Generator-site bridge: Tasmota/MQTT meter telemetry -> Ishtirak ingest API."
requires-python = ">=3.12"
dependencies = [
    "paho-mqtt>=2.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
ishtirak-edge-agent = "edge_agent.main:main"

[tool.pytest.ini_options]
addopts = "--cov=edge_agent --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
